force-app/main/default/objects/Customer_Vehicle_Info__c/Customer_Vehicle_Info__c.object-meta.xml
<CustomObject>
    <label>Customer Vehicle Information</label>
    <nameField>
        <label>Vehicle Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Vechiles Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>