force-app/main/default/objects/Customer_Vehicle_Info__c/fields/Customer_address__c.field-meta.xml
<CustomField>
    <fullName>Customer_address__c</fullName>
    <inlineHelpText>enter customer address</inlineHelpText>
    <label>Customer address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>