force-app/main/default/objects/Customer_Vehicle_Info__c/fields/Customer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile_Number__c</fullName>
    <inlineHelpText>9000000000</inlineHelpText>
    <label>Customer Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>