force-app/main/default/objects/Customer_Vehicle_Info__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>name of the customer</description>
    <label>Customer Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>