force-app/main/default/objects/Customer_Vehicle_Info__c/fields/Premise_Name__c.field-meta.xml
<CustomField>
    <fullName>Premise_Name__c</fullName>
    <inlineHelpText>enter building or community name</inlineHelpText>
    <label>Premise Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>